  version 1.4, and doesn't build the Java14.java otherwise
- Optimized text area's buffer event handler -- this should result in
  faster 'Replace All'
- Addition to jEdit's glob syntax: "{!glob}" is converted to the
  regular expression "(?!glob).*"
- You can double-click abbrevs in the 'Abbreviations' option pane to
  edit them

+ Bug Fixes

- Malformed URL errors were not being reported correctly
- Fixed exception when double- or triple-click dragging (this was meant
  to be fixed in pre5 but I didn't get the fix quite right)
- Fixed NullPointerException when opening a new view
- Out of memory errors were not always reported
- Fixed minor inconsistency in handling of words -vs- keywords in
  'Complete Word' command
- Properly fixed 'unprintable characters in table of contents' bug
- Replace in selection would preserve the current selection, but not
  the caret position, so if there was a match at the start of the
  selection, the caret would move inside the selected range
- On Windows, double-clicking on a drive letter in the drives list of
  the file system browser would open the wrong location
- Focus manager under JDK 1.4 used the wrong traversal policy, this
  caused a few problems
- The status bar message shown when a bracket is out of bounds was not
  always being displayed if soft wrap was in use
- Fixed silly behavior in 'Install Plugins' dialog box
- Fixed possible NPE when loading tool bar with buttons for which
  actions do not exist
- Fold level changed events were not fired; this caused problems with
  indent folding
- Changing the fold mode using the 'Buffer Options' dialog box in a
  buffer that defined the 'collapseFolds' property could have slightly
  bizzarre results, because the folds were collapsed before the fold
  handler was changed
- Creating rectangular selections on MacOS was not possible since both
  the context menu and the rectangular selection was bound to
  Control-click. Now, you can Command-drag to create rectangular